# lb_ros_components

./: .gitignore  CMakeLists.txt  default.nix  flake.nix  glim-ros2.nix  libuvc_cam.nix  package.xml  readme.md
config/: config.yaml  config_local.yaml
config/glim_config/: config.json  config_global_mapping_cpu.json  config_odometry_cpu.json  config_odometry_ct.json  config_preprocess.json  config_ros.json  config_sensors.json  config_sub_mapping_cpu.json
include/: CalibNode.hpp  MCAPWriter.hpp
launch/: launch.py  launch_camera_only.py  launch_camera_only_laptop.py  launch_gps_only.py  launch_lidar.py  launch_lidar_cam.py  launch_lidar_only.py  launch_mcap_calib.py
src/: CalibNode.cpp  MCAPWriter.cpp
